hcc/tests/conform/errors/sema/undeclared_identifier.hc
//@ error: use of undeclared identifier
#include <stdlib.hh>
U0 Main()
{
  x = 1;
}
